--- a/src/app/home/operation/new-do2/new-do2.component.html
+++ b/src/app/home/operation/new-do2/new-do2.component.html
@@ -33,7 +33,7 @@
                     <td width="5%">{{item.CONTAINERS}}</td>
                     <td width="5%">{{item.COMMODITY}}</td>
                     <td width="9%"><button class="form-btn-info btn-sm"
-                            (click)="getBLDetails(item.IS_SURRENDERED,item.BL_NO)">New
+                            (click)="getBLDetails(item.IS_SURRENDERED,item.BL_NO,item.BL_TYPE)">New
                             DO</button>
                     </td>
                 </tr>
