--- a/src/app/home/operation/new-bl/new-bl.component.html
+++ b/src/app/home/operation/new-bl/new-bl.component.html
@@ -628,7 +628,7 @@
                                         src="assets/img/nn.png" width="18px" height="18px" class="me-2"></a>
                                 <a tooltip="Container Annexure" placement="top" (click)="annexureBL(item.BL_NO)"><img
                                         src="assets/img/attachment.png" class="me-2" width="14px" height="14px"></a>
-                                <a tooltip="Surrender BL" placement="top"
+                                <a *ngIf="item.BL_TYPE != 'seaway'" tooltip="Surrender BL" placement="top"
                                     (click)="openSurrenderBLModal(item.BL_NO)"><img src="assets/img/folder.png"
                                         width="14px" height="14px"></a>
                             </div>
