--- a/src/app/home/rate-requests/quotation-list/quotation-list.component.html
+++ b/src/app/home/rate-requests/quotation-list/quotation-list.component.html
@@ -192,7 +192,7 @@
                                                     </div>
                                                     <div class="col-md-6 mb-4">
                                                         <div class="form-group">
-                                                            <ng-select
+                                                            <ng-select (change)="getSlotOperator($event)"
                                                                 [ngClass]="{'invalid': submitted && f4.VOYAGE_NO.errors}"
                                                                 formControlName="VOYAGE_NO">
                                                                 <ng-option><button data-bs-toggle="modal"
