--- a/src/app/home/booking/er-list/er-list.component.html
+++ b/src/app/home/booking/er-list/er-list.component.html
@@ -12,7 +12,7 @@
             <div class="col-md-3">
                 <div class="form-group">
                     <label class="form-label2">{{'Header.RepoNo'|translate}}</label>
-                    <input formControlName="DO_NO" type="text" class="form-control2">
+                    <input formControlName="REPO_NO" type="text" class="form-control2">
                 </div>
             </div>
             <div class="col-md-2">
@@ -94,10 +94,9 @@
 
                             </div>
                             <div class="col-md-2 text-end" *ngIf="item.CRO_NO">
-                                <button (click)="getERCRODetails(item.REPO_NO,item.CRO_NO,item.CRO_VALIDITY_DATE)"
+                                <button (click)="getERCRODetails(item.REPO_NO,item.CRO_NO)"
                                     class="form-btn rounded-pill mb-2">View
                                     PDF</button>
-                                <!-- <a (click)="getERCRODetails(item.REPO_NO,item.CRO_NO,item.CRO_VALIDITY_DATE)"><img src="/assets/img/visibility.png" height="24px" width="24px"></a> -->
                             </div>
                         </div>
                     </div>
@@ -217,7 +216,7 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button [disabled]="isLoading" type="button" class="form-btn" (click)="getERCRODetails(croNo)">Send
+                <button [disabled]="isLoading" type="button" class="form-btn" (click)="getERCRODetails('',croNo)">Send
                     Email <span *ngIf="isLoading" class="fa fa-spinner fa-spin"></span></button>
             </div>
         </div>
