--- a/src/app/home/booking/new-er/new-er.component.html
+++ b/src/app/home/booking/new-er/new-er.component.html
@@ -277,8 +277,7 @@
                                                                         <option value="">--Select--</option>
                                                                         <option *ngFor="let item of currencyList"
                                                                             value="{{item.CODE}}">
-                                                                            {{item.CODE_DESC}}
-                                                                            ({{item.CODE}})
+                                                                            {{item.CODE}}
                                                                         </option>
 
                                                                     </select>
@@ -428,8 +427,8 @@
                                                                         [ngClass]="{'invalid': submitted && item.controls.CURRENCY.errors?.required}">
                                                                         <option value="" selected>--Select--</option>
                                                                         <option *ngFor="let item of currencyList"
-                                                                            value="{{item.CODE}}">{{item.CODE_DESC}}
-                                                                            ({{item.CODE}})
+                                                                            value="{{item.CODE}}">
+                                                                            {{item.CODE}}
                                                                         </option>
                                                                     </select>
                                                                     <div *ngIf="submitted && item.controls.CURRENCY.errors?.required"
